language/move-lang/tests/move_check/parser/native_main.exp
error: 

   ┌── tests/move_check/parser/native_main.move:2:1 ───
   │
 2 │ native fun main();
   │ ^^^^^^ Native functions can only be declared inside a module
   │

